WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
190016
Assert that performJITMemcpy() is always called with instruction size aligned addresses on ARM64.
https://bugs.webkit.org/show_bug.cgi?id=190016
Summary
Assert that performJITMemcpy() is always called with instruction size aligned...
Mark Lam
Reported
2018-09-26 16:15:40 PDT
<
rdar://problem/44802875
>
Attachments
proposed patch.
(10.45 KB, patch)
2018-09-26 16:23 PDT
,
Mark Lam
saam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2018-09-26 16:23:58 PDT
Created
attachment 350921
[details]
proposed patch.
Mark Lam
Comment 2
2018-09-26 16:26:19 PDT
Comment on
attachment 350921
[details]
proposed patch. View in context:
https://bugs.webkit.org/attachment.cgi?id=350921&action=review
> Source/JavaScriptCore/ChangeLog:3 > + Assert that performJITMemcpy() is always called with instruction size aligned addresses.
Will update this title to say "... on ARM64" before landing.
Saam Barati
Comment 3
2018-09-26 16:48:35 PDT
Comment on
attachment 350921
[details]
proposed patch. r=me
Mark Lam
Comment 4
2018-09-26 17:15:00 PDT
Thanks for the review. Landed in
r236534
: <
http://trac.webkit.org/r236534
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug